# communication_netstack

./: .clang-format  .gitignore  1.diff  CMakeLists.txt  Cargo.toml  README_zh.md  bundle.json  netstack_config.gni  tack_common_utils_test  temp.diff
frameworks/cj/http/: BUILD.gn
frameworks/cj/http/include/: constant.h  ffi_structs.h  lru_cache_disk_handler.h  net_http_client_exec.h  net_http_ffi.h  net_http_request.h  net_http_request_context.h
frameworks/cj/http/src/: lru_cache_disk_handler.cpp  net_http_client_exec.cpp  net_http_ffi.cpp  net_http_mock.cpp  net_http_request.cpp  net_http_request_context.cpp  net_http_utils.cpp
frameworks/js/builtin/: BUILD.gn  CMakeLists.txt  fetch_module.cpp
frameworks/js/builtin/http_request/: http_async_callback.cpp  http_request.cpp  http_request_utils.cpp  response_data.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/fetch/: BUILD.gn
frameworks/js/napi/http/: BUILD.gn
frameworks/js/napi/net_ssl/: BUILD.gn
frameworks/js/napi/socket/: BUILD.gn
frameworks/js/napi/tls/: BUILD.gn
frameworks/js/napi/websocket/: BUILD.gn
frameworks/native/tls_socket/: BUILD.gn
frameworks/native/tls_socket/include/: secure_data.h  socket_error.h  tls.h  tls_certificate.h  tls_config_enhanced.h  tls_configuration.h  tls_context.h  tls_context_server.h  tls_key.h  tls_socket_internal.h  tls_utils.h
frameworks/native/tls_socket/src/: secure_data.cpp  socket_error.cpp  tls.cpp  tls_certificate.cpp  tls_config_enhanced.cpp  tls_configuration.cpp  tls_context.cpp  tls_context_server.cpp  tls_key.cpp  tls_socket.cpp  tls_socket_internal.cpp  tls_socket_server.cpp  tls_utils.cpp
interfaces/innerkits/http_client/: BUILD.gn  libhttp_client.map
interfaces/innerkits/http_client/include/: http_client.h  http_client_constant.h  http_client_error.h  http_client_request.h  http_client_response.h  http_client_task.h
interfaces/innerkits/http_interceptor/: BUILD.gn  libhttp_interceptor.map
interfaces/innerkits/http_interceptor/include/: http_interceptor_mgr.h  http_interceptor_type.h  net_http_type.h
interfaces/innerkits/websocket_client/: BUILD.gn  libwebsocket_client.map
interfaces/innerkits/websocket_client/include/: clientContex.h  client_context.h  websocket_client_innerapi.h
test/: BUILD.gn
test/fuzztest/http_fuzzer/: BUILD.gn  http_fuzzer.cpp  http_fuzzer.h
test/fuzztest/httpcapi_fuzzer/: BUILD.gn  http_capi_fuzzer.cpp  http_capi_fuzzer.h
test/fuzztest/netssl/: BUILD.gn
test/fuzztest/netssl/fuzztest/: BUILD.gn
test/fuzztest/netsslinner_fuzzer/: BUILD.gn  netssl_inner_fuzzer.cpp  netssl_inner_fuzzer.h
test/fuzztest/socket/: BUILD.gn  test_napi_exec.cpp
test/fuzztest/socket/fuzztest/: BUILD.gn
test/fuzztest/websocket/: BUILD.gn
test/fuzztest/websocket/fuzztest/: BUILD.gn
test/fuzztest/websocket_capi_fuzzer/: BUILD.gn  websocket_capi_fuzzer.cpp
test/fuzztest/websocket_inner_fuzzer/: BUILD.gn  websocket_inner_fuzzer.cpp  websocket_inner_fuzzer.h
test/fuzztest/websocketcapi_fuzzer/: BUILD.gn  websocket_capi_fuzzer.cpp
test/fuzztest/websocketinnerapi_fuzzer/: BUILD.gn
test/napi/common/: test_common.h
test/napi/fetch/: CMakeLists.txt  test_napi_exec.cpp
test/napi/http/: CMakeLists.txt  test_napi_exec.cpp
test/napi/log/: test_hilog.cpp
test/napi/socket/: BUILD.gn  CMakeLists.txt  test_napi_exec.cpp
test/napi/socket/fuzztest/: BUILD.gn
test/napi/websocket/: CMakeLists.txt  test_napi_exec.cpp
test/napi/websocket/unittest/: BUILD.gn  CMakeLists.txt  websocket_test.cpp  websocket_unittest.cpp
test/unittest/http/: BUILD.gn  HttpExecTest.cpp  HttpInterceptorTest.cpp  HttpRequestOptionsTest.cpp
test/unittest/http/cache/: BUILD.gn  Base64Test.cpp  CMakeLists.txt  HttpCacheStrategyTest.cpp  cache_test.cpp
test/unittest/http_client/: BUILD.gn  HttpClientErrorTest.cpp  HttpClientRequestTest.cpp  HttpClientResponseTest.cpp  HttpClientTaskTest.cpp  HttpClientTest.cpp  HttpClientTlsConfigTest.cpp
test/unittest/http_client/cache/: Base64Test.cpp  (+3 more)
test/unittest/http_client_test/: HttpClientErrorTest.cpp  HttpClientRequestTest.cpp  HttpClientResponseTest.cpp  HttpClientTaskTest.cpp  HttpClientTest.cpp
test/unittest/http_interceptor/: BUILD.gn  HttpInterceptorInterfaceTest.cpp  HttpInterceptorTest.cpp  HttpInterceptorTypeTest.cpp
test/unittest/http_test/: HttpClientRequestTest.cpp
test/unittest/net_http/: BUILD.gn  NetHttpTest.cpp  NetStackHashMapTest.cpp
test/unittest/netssl/: BUILD.gn  NetSslCApiTest.cpp  NetsslTest.cpp  VerifyCertChainContextTest.cpp  VerifyCertChainTest.cpp
test/unittest/socket/: BUILD.gn  SocketTest.cpp
test/unittest/sockettest/: WebSocketCallbackTest.cpp  WebSocketRequestTest.cpp  WebSocketResponseTest.cpp  WebSocketTest.cpp  websocket_inner_unittest.cpp
test/unittest/tcp_core_test/: TcpSocketTaskTaskTest.cpp  TcpSocketTest.cpp
test/unittest/tcp_test/: TcpSocketCallbackTest.cpp  TcpSocketErrorTest.cpp  TcpSocketResponseTest.cpp  TcpSocketSSLTest.cpp  TcpSocketTest.cpp
test/unittest/tls_client_test/: TlsClientSocketResponseTest.cpp
test/unittest/tlssocket/: BUILD.gn
test/unittest/udp_test/: NetStackCommonUtilsTest.cpp  SocketTest.cpp  TcpSocketTaskTaskTest.cpp
test/unittest/web_server_core_test/: WebServerSocketServerTest.cpp
test/unittest/websocket/: BUILD.gn  WebSocketTest.cpp
test/unittest/websocket_capi_unittest/: BUILD.gn  websocket_capi_unittest.cpp
test/unittest/websocket_inner_unittest/: BUILD.gn  websocket_inner_unittest.cpp
test/unittest/websocket_test/: NetStackCommonUtilsTest.cpp  NetstackNetworkProfilerUtilsTest.cpp  SocketTest.cpp  WebSocketTest.cpp  websocket_capi_unittest.cpp  websocket_inner_unittest.cpp
utils/napi_utils/: BUILD.gn
utils/napi_utils/include/: base_async_work.h  base_context.h  event_listener.h  event_manager.h  hi_app_event_report.h  module_template.h  napi_utils.h  netstack_napi_utils.h  secure_char.h  timing.h
utils/napi_utils/src/: base_context.cpp  event_listener.cpp  event_manager.cpp  hi_app_event_report.cpp  module_template.cpp  napi_utils.cpp  netstack_napi_utils.cpp  secure_char.cpp  timing.cpp
(+551 files in other folders)
